# artxt

./: .gitignore  CMakeLists.txt  CMakePresets.json  artxt.cpp  artxt.h
include/: Event.hpp  Function.hpp  callable.h  sdlw.h
include/app/: Application.hpp  CharBuffer.h
include/callable/: Delegate.hpp  Event.hpp  Method.hpp
include/editor/: CharBuffer.h
include/functors/: Event.hpp  Function.hpp  Method.hpp  functors.h
include/sdlw/: Color.h  Drawer.h  Drawer.hpp  Event.hpp  FPoint.h  FRect.h  Font.h  Font.hpp  Point.h  Rect.h  Renderer.hpp  SDLHolder.hpp  Surface.h  Texture.h  Time.h  UniqueResource.hpp  Window.hpp  sdlw.h  structures.h  wtypes.h
include/sdlw/structures/: FPoint.h
include/structures/: Color.h  FPoint.h  FRect.h  Point.h  Rect.h
src/: artxt.cpp  main.cpp
src/app/: Application.cpp
src/sdlw/: Color.cpp  Drawer.cpp  Font.cpp  Renderer.cpp  Time.cpp  Window.cpp
src/sdlw/include/: Color.hpp  Delegate.hpp  Drawer.hpp  Event.hpp  Function.hpp  Method.hpp  Renderer.hpp  Window.hpp
